// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TerragruntPlan Terragrunt edit view test should render edit view as new step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup md"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="universalInputNameWithId"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Id
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                />
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="terragruntPlanEditView-tgPlan-undefined_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="timeout"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="terragruntPlanEditView-tgPlan-undefined_timeout"
          >
            pipelineSteps.timeoutLabel
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="container"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="10m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    data-testid="multi-type-button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup md"
    >
      <div
        class="bp3-form-group radioBtns"
      >
        <label
          class="bp3-label"
          for="spec.configuration.command"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="terragruntPlanEditView-tgPlan-undefined_spec.configuration.command"
          >
            commandLabel
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  checked=""
                  class="RadioButton--input"
                  name="spec.configuration.command"
                  type="radio"
                  value="Apply"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                filters.apply
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.configuration.command"
                  type="radio"
                  value="Destroy"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.destroy
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup md"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.provisionerIdentifier"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="terragruntPlanEditView-tgPlan-undefined_spec.provisionerIdentifier"
          >
            pipelineSteps.provisionerIdentifier
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
          >
            <div
              class="bp3-input-group MultiTypeInput--input"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.provisionerIdentifier"
                placeholder="pipeline.terraformStep.provisionerIdentifier"
                type="text"
                value=""
              />
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  data-testid="multi-type-button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup md"
    >
      <div
        class="connectorLabel"
        style="margin-bottom: 10px;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          data-test-id="connectorTooltip"
        >
          <span
            class="Tooltip--acenter bp3-label"
            data-tooltip-id="terragruntPlanEditView-tgPlan-undefined_spec.configuration.secretManagerRef"
          >
            platform.connectors.title.secretManager
          </span>
        </div>
        <div
          style="display: flex; align-items: center;"
        >
          <div
            class="bp3-form-group"
            style="margin-bottom: 0px;"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="width: 261px;"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                  data-testid="cr-field-spec.configuration.secretManagerRef"
                  style="width: 261px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span
                      class="placeholder"
                    >
                      select
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <label
        class="Label--main configLabel"
        data-tooltip-id="tfConfigurationFile"
      >
        cd.configurationFile
      </label>
      <div
        class="configFile addMarginBottom"
      >
        <div
          class="configField"
        >
          <a
            class="configPlaceHolder"
            data-name="config-edit"
            data-testid="editConfigButton"
          >
            cd.configFilePlaceHolder
          </a>
        </div>
      </div>
      <div
        class="formGroup md"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="spec.configuration.moduleConfig.terragruntRunType"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="terragruntPlanEditView-tgPlan-undefined_spec.configuration.moduleConfig.terragruntRunType"
            >
              cd.moduleConfiguration
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="RadioButtonGroup--inline"
              >
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    name="spec.configuration.moduleConfig.terragruntRunType"
                    type="radio"
                    value="RunAll"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  All Modules
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    checked=""
                    class="RadioButton--input"
                    name="spec.configuration.moduleConfig.terragruntRunType"
                    type="radio"
                    value="RunModule"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  Specific Module
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup md"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="spec.configuration.moduleConfig.path"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="terragruntPlanEditView-tgPlan-undefined_spec.configuration.moduleConfig.path"
            >
              common.path
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="bp3-input-group MultiTypeInput--input"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="spec.configuration.moduleConfig.path"
                  placeholder="Enter path"
                  type="text"
                  value=""
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    data-testid="multi-type-button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Accordion--accordion accordion"
    >
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-1-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-1-summary"
        >
          <div
            class="Accordion--label"
          >
            common.optionalConfig
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test TerragruntPlan Terragrunt inputset/deployment view test Basic snapshot- InputSet mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.provisionerIdentifier-0"
          >
            <label
              class="bp3-label"
              for="test.spec.provisionerIdentifier"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.provisionerIdentifier"
              >
                pipelineSteps.provisionerIdentifier
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.provisionerIdentifier"
                    placeholder="pipeline.terraformStep.provisionerIdentifier"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup md"
        >
          <div
            class="fieldAndOptions"
          >
            <div
              class="bp3-form-group"
              data-id="test.timeout-1"
            >
              <label
                class="bp3-label"
                for="test.timeout"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="stepTestUtilForm_test.timeout"
                >
                  pipelineSteps.timeoutLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="container"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="flex-grow: 1;"
                  >
                    <div
                      class="bp3-input-group bp3-fill"
                    >
                      <input
                        class="bp3-input"
                        name="test.timeout"
                        placeholder="Enter w/d/h/m/s/ms"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup md"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              data-test-id="connectorTooltip"
            >
              <span
                class="Tooltip--acenter bp3-label"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.secretManagerRef"
              >
                platform.connectors.title.secretManager
              </span>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                data-id="undefined-2"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 388px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-test.spec.configuration.secretManagerRef"
                      style="width: 388px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          select
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.moduleConfig.path-3"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.moduleConfig.path"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.moduleConfig.path"
              >
                common.path
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.moduleConfig.path"
                    placeholder="Enter path"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <label
          class="Label--main"
        >
          cd.configurationFile
        </label>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.configFiles.store.spec.branch-4"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.configFiles.store.spec.branch"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.configFiles.store.spec.branch"
              >
                pipelineSteps.deploy.inputSet.branch
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.configFiles.store.spec.branch"
                    placeholder="pipeline.manifestType.branchPlaceholder"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.configFiles.store.spec.folderPath-5"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.configFiles.store.spec.folderPath"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.configFiles.store.spec.folderPath"
              >
                common.git.folderPath
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.configFiles.store.spec.folderPath"
                    placeholder="pipeline.manifestType.pathPlaceholder"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.backendConfig.spec.content-6"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.backendConfig.spec.content"
            >
              <div
                class="formLabel"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="stepTestUtilForm_test.spec.configuration.backendConfig.spec.content"
                >
                  cd.backEndConfig
                </span>
                <div
                  class="bp3-popover-wrapper typeSelectorWrapper"
                >
                  <div
                    class="bp3-popover-target typeSelector"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="bp3-icon StyledProps--main icon fixed"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="main"
              >
                <textarea
                  name="test.spec.configuration.backendConfig.spec.content"
                />
                <button
                  class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main expandBtn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                    icon="fullscreen"
                  >
                    <svg
                      data-icon="fullscreen"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        fullscreen
                      </desc>
                      <path
                        d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.workspace-7"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.workspace"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.workspace"
              >
                pipelineSteps.workspace
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.workspace"
                    placeholder="pipeline.terraformStep.workspace"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      aria-label="Submit"
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test TerragruntPlan Terragrunt inputset/deployment view test Deploymentform mode - readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.provisionerIdentifier-0"
          >
            <label
              class="bp3-label"
              for="test.spec.provisionerIdentifier"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.provisionerIdentifier"
              >
                pipelineSteps.provisionerIdentifier
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.provisionerIdentifier"
                    placeholder="pipeline.terraformStep.provisionerIdentifier"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup md"
        >
          <div
            class="fieldAndOptions"
          >
            <div
              class="bp3-form-group"
              data-id="test.timeout-1"
            >
              <label
                class="bp3-label"
                for="test.timeout"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="stepTestUtilForm_test.timeout"
                >
                  pipelineSteps.timeoutLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="container"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="flex-grow: 1;"
                  >
                    <div
                      class="bp3-input-group bp3-fill"
                    >
                      <input
                        class="bp3-input"
                        name="test.timeout"
                        placeholder="Enter w/d/h/m/s/ms"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup md"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              data-test-id="connectorTooltip"
            >
              <span
                class="Tooltip--acenter bp3-label"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.secretManagerRef"
              >
                platform.connectors.title.secretManager
              </span>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                data-id="undefined-2"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 388px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-test.spec.configuration.secretManagerRef"
                      style="width: 388px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          select
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.moduleConfig.path-3"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.moduleConfig.path"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.moduleConfig.path"
              >
                common.path
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.moduleConfig.path"
                    placeholder="Enter path"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <label
          class="Label--main"
        >
          cd.configurationFile
        </label>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.configFiles.store.spec.branch-4"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.configFiles.store.spec.branch"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.configFiles.store.spec.branch"
              >
                pipelineSteps.deploy.inputSet.branch
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.configFiles.store.spec.branch"
                    placeholder="pipeline.manifestType.branchPlaceholder"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.configFiles.store.spec.folderPath-5"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.configFiles.store.spec.folderPath"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.configFiles.store.spec.folderPath"
              >
                common.git.folderPath
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.configFiles.store.spec.folderPath"
                    placeholder="pipeline.manifestType.pathPlaceholder"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.backendConfig.spec.content-6"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.backendConfig.spec.content"
            >
              <div
                class="formLabel"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="stepTestUtilForm_test.spec.configuration.backendConfig.spec.content"
                >
                  cd.backEndConfig
                </span>
                <div
                  class="bp3-popover-wrapper typeSelectorWrapper"
                >
                  <div
                    class="bp3-popover-target typeSelector"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="bp3-icon StyledProps--main icon fixed"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="main"
              >
                <textarea
                  name="test.spec.configuration.backendConfig.spec.content"
                />
                <button
                  class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main expandBtn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                    icon="fullscreen"
                  >
                    <svg
                      data-icon="fullscreen"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        fullscreen
                      </desc>
                      <path
                        d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fieldAndOptions formGroup md"
        >
          <div
            class="bp3-form-group"
            data-id="test.spec.configuration.workspace-7"
          >
            <label
              class="bp3-label"
              for="test.spec.configuration.workspace"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_test.spec.configuration.workspace"
              >
                pipelineSteps.workspace
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="test.spec.configuration.workspace"
                    placeholder="pipeline.terraformStep.workspace"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      aria-label="Submit"
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test TerragruntPlan Terragrunt inputset/deployment view test Input set view validation for timeout: Value must be greater than or equal to "10s" 1`] = `
Object {
  "timeout": "Value must be greater than or equal to \\"10s\\"",
}
`;

exports[`Test TerragruntPlan Terragrunt inputset/deployment view test Terragrunt Input step view with no runtime field 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div />
    </form>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      aria-label="Submit"
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test TerragruntPlan Terragrunt inputvariable view test Baisc snapshot- InputVariable view 1`] = `
<div>
  <div
    class="variablesListTable variablePaddingL3"
  />
  <div
    class="variablesListTable variablePaddingL3"
  />
  <div
    class="variablesListTable variablePaddingL3"
  />
  <p
    class="StyledProps--font StyledProps--main stepTitle"
  >
    pipelineSteps.configFiles
  </p>
  <div
    class="variablesListTable variablePaddingL4"
  />
  <p
    class="StyledProps--font StyledProps--main stepTitle"
  >
    cd.terraformVarFiles
  </p>
  <div
    class="variablesListTable variablePaddingL4"
  />
  <p
    class="StyledProps--font StyledProps--main stepTitle"
  >
    pipelineSteps.backendConfig
  </p>
  <div
    class="variablesListTable variablePaddingL4"
  />
  <p
    class="StyledProps--font StyledProps--main stepTitle"
  >
    environmentVariables
  </p>
  <div
    class="variablesListTable variablePaddingL4"
  />
</div>
`;
